# VideoCaptureToPDF

./: .gitignore  ReadMe.md  pyproject.toml  requirements.txt
docs/: getting-started.md  readme.md
src/: ReadMe.md  src.lnk  video2pdf.py
