[project]
name = "video-capture-to-pdf"
version = "0.1.0"
description = "Extract stills from a video presentation and convert them to a PDF"
readme = "ReadMe.md"
requires-python = ">=3.13"
dependencies = [
    "imutils>=0.5.4",
    "opencv-python>=4.6.0.66",
    "img2pdf>=0.4.0",
]

[tool.pylint.master]
docstring-min-length = 10
disable = ["missing-function-docstring", "missing-class-docstring", "missing-module-docstring"]

[tool.pylint.format]
good-names = ["i", "j", "k", "x", "y", "id"]
